added check box for subscription , edited the regisServlet,UserDaoImpl,User, and registration jsp

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,14 @@
     <servlet-name>registration</servlet-name>
     <url-pattern>/registration</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SubscribeServlet</display-name>
+    <servlet-name>SubscribeServlet</servlet-name>
+    <servlet-class>fwrp.controller.SubscribeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SubscribeServlet</servlet-name>
+    <url-pattern>/SubscribeServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
