I created FeedbackServlet, feedbackPage.jsp, feedbackPage.css ... i also added a button to the charity and consumer homepage that direct to feedbackPage. i updated the FWRP.sql as well

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,24 @@
     <servlet-name>SubscribeServlet</servlet-name>
     <url-pattern>/SubscribeServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UpdateSubscriptionServlet</display-name>
+    <servlet-name>UpdateSubscriptionServlet</servlet-name>
+    <servlet-class>fwrp.controller.UpdateSubscriptionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateSubscriptionServlet</servlet-name>
+    <url-pattern>/UpdateSubscriptionServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FeedbackServlet</display-name>
+    <servlet-name>FeedbackServlet</servlet-name>
+    <servlet-class>fwrp.controller.FeedbackServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FeedbackServlet</servlet-name>
+    <url-pattern>/FeedbackServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
